# libtorch_win_test

./: CMakeLists.txt  LICENSE.md  README.md  input.csv  output.csv  wintorch.cpp
include/: owndata.h
src/: owndata.cpp
